--- a/apps/server/nixpacks.toml
+++ b/apps/server/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs", "pnpm"]
 cmds = ["pnpm install --frozen-lockfile"]
 
 [phases.build]
-cmds = ["pnpm --filter "./apps/server" build"]
+cmds = ["pnpm --filter \"./apps/server\" build"]
 
 [start]
-cmd = "pnpm --filter "./apps/server" start"
+cmd = "pnpm --filter \"./apps/server\" start"
